# gost_xml_transform

./: .gitignore  .pylintrc  pyproject.toml  readme.md  requirements.txt  setup.py  tox.ini
gost_xml_transform/: __init__.py  transform.py
tests/: conftest.py  data.json  test_base_transform.py  test_examples.py  test_namespace_sorting.py
